fixing line-height in select menus and improving notification readability

--- a/theme/src/styles/cnr-carbon.sass
+++ b/theme/src/styles/cnr-carbon.sass
@@ -29,6 +29,12 @@ $input-border: 1px solid $ui-03
 .bx--list-box
   border: $input-border
 
+.bx--inline-notification__title
+  color: #e0182d
+
+.bx--select-input
+  line-height: 1.1
+
 @import '~carbon-components/scss/globals/scss/styles.scss'
 @import 'cnr-components/cnr-data-table'
 @import 'cnr-components/cnr-pagination'
